# esmini-issue--279

./: .gitignore  CMakeLists.txt  README.md  test.cpp
resources/xosc/: cut-in.xosc
